# justin_utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: integration.yml  release.yml  tests.yml
justin_utils/: cli.py  data.py  exif.py  filesystem.py  multiplexer.py  parts.py  singleton.py  sources.py  subfolder.py  transfer.py  util.py
src/justin_utils/: cli.py  data.py  exif.py  filesystem.py  joins.py  json_migration.py  parts.py  pylinq.py  sources.py  transfer.py  util.py
tests/: conftest.py  test_cd.py  test_cli.py  test_data.py  test_exif.py  test_filesystem.py  test_joins.py  test_json_migration.py  test_parts.py  test_pylinq.py  test_singleton.py  test_sources.py  test_subfolder.py  test_time_formatter.py  test_transfer.py  test_util.py
